Fix filter for new Shift's view

--- a/src/css/view/shift.scss
+++ b/src/css/view/shift.scss
@@ -61,8 +61,7 @@
     }
 
     &.draft {
-      color: #434343;
-      background-color: #FDD835;
+      background-color: #FB8C00;
     }
   }
 
